transaction: fix date filter size on mobile and reset functionality

--- a/app/ui-dev/src/css/app.sass
+++ b/app/ui-dev/src/css/app.sass
@@ -2,6 +2,9 @@
 // body
 //   font-family: 'Product Sans Regular'
 
+.date-filter
+  margin-right: 10px
+
 .custom-dropdown
   margin-top: -10px
 
